# recipe-app-api

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
employees/: api.py  models.py
employees/migrations/: 0001_initial.py
recipe_api/: api.py  urls.py
recipe_app/: asgi.py  settings.py  urls.py  wsgi.py
